--- a/gtk-3.0/apps/unity.css
+++ b/gtk-3.0/apps/unity.css
@@ -51,27 +51,37 @@ UnityPanelWidget,
     border-width: 0 0 1px 0;
     border-style: solid;
     border-color: @panel_bg_color;
-    background-color: @panel_bg_color;
+    /*background-color: @panel_bg_color;*/
+    background-color: alpha(@panel_bg_color, 0.8);
     background-image: none;
     color: @panel_fg_color;
+    font-weight: 300px;
 }
 
 .unity-panel.menubar,
 .unity-panel .menubar {
+  padding: 0 1px;
 }
 
 .unity-panel.menuitem,
 .unity-panel .menuitem {
     border-width: 0 1px;
-    color: @panel_fg_color;
+    border-style: solid;
+    padding: 0 5px;
+    color: @panel_fg_color_b;
+}
+
+.unity-panel.menubar:backdrop,
+.unity-panel .menubar *:backdrop {
+    color: @fg_color;
 }
 
 .unity-panel.menubar.menuitem:hover,
 .unity-panel.menubar .menuitem *:hover {
     border-color: mix(@panel_bg_color, @panel_fg_color, 0.21);
-    background-color: mix(@panel_bg_color, @panel_fg_color, 0.21);
     background-image: none;
     color: shade(@panel_fg_color, 1.08);
+    background-color: alpha(#panel_bg_color, 0.6);
 }
 
 SheetStyleDialog.unity-force-quit {
