--- a/gtk-3.0/gtk-dark.css
+++ b/gtk-3.0/gtk-dark.css
@@ -1,18 +1,30 @@
+/* desktop itens */
+
+@define-color desktop_item_fg #eeeeee;
+@define-color desktop_item_selected_fg @theme_selected_fg_color;
+@define-color desktop_item_text_shadow alpha(#ccc, 0.8);
+
 /* default color scheme */
-@define-color base_color #333333;
-@define-color bg_color #2d2d2d;
-@define-color text_color #dedede;
-@define-color fg_color #dcdcdc;
-@define-color selected_bg_color #d64937;
+
+@define-color bg_color #ECECEC;
+@define-color fg_color #555555;
+@define-color base_color #f9f9f9;
+@define-color text_color #333333;
+@define-color selected_bg_color #378ed6;
 @define-color selected_fg_color #f9f9f9;
-@define-color tooltip_bg_color #2d2d2d;
+@define-color tooltip_bg_color #336E7B;
 @define-color tooltip_fg_color #dcdcdc;
 
 /* dark color scheme */
-@define-color dark_bg_color #2d2d2d;
+
+@define-color dark_bg_color #336E7B;
 @define-color dark_fg_color #dcdcdc;
 
+/* menu */
+
+
 /* colormap actually used by the theme, to be overridden in other css files */
+
 @define-color theme_bg_color @bg_color;
 @define-color theme_fg_color @fg_color;
 @define-color theme_base_color @base_color;
@@ -23,10 +35,12 @@
 @define-color theme_tooltip_fg_color @tooltip_fg_color;
 
 /* shadow effects */
+
 @define-color light_shadow #fff;
-@define-color dark_shadow #000;
+@define-color dark_shadow #333;
 
 /* misc colors used by gtk+ */
+
 @define-color info_fg_color rgb (58, 135, 173);
 @define-color info_bg_color rgb (217, 237, 247);
 @define-color warning_fg_color rgb (192, 152, 83);
@@ -41,6 +55,7 @@
 @define-color error_color #cc0000;
 
 /* widget colors */
+
 @define-color titlebar_bg_color @dark_bg_color;
 @define-color titlebar_fg_color @dark_fg_color;
 @define-color menubar_bg_color @dark_bg_color;
@@ -51,17 +66,21 @@
 @define-color menu_fg_color @dark_fg_color;
 @define-color panel_bg_color @dark_bg_color;
 @define-color panel_fg_color @dark_fg_color;
+@define-color panel_fg_color_b #d7d7d7;
 
 /* osd */
+
 @define-color osd_base @dark_bg_color;
 @define-color osd_fg @dark_fg_color;
 @define-color osd_bg alpha(@osd_base, 0.8);
 
 /* lightdm greeter colors */
+
 @define-color lightdm_bg_color @dark_bg_color;
 @define-color lightdm_fg_color @dark_fg_color;
 
 /* window manager colors */
+
 @define-color wm_bg @titlebar_bg_color;
 @define-color wm_border_focused mix(shade(@titlebar_bg_color, 0.7), @titlebar_fg_color, 0.21);
 @define-color wm_border_unfocused mix(shade(@titlebar_bg_color, 0.7), @titlebar_fg_color, 0.12);
@@ -73,10 +92,8 @@
 @define-color wm_icons_unfocused mix(@titlebar_fg_color, @titlebar_bg_color, 0.4);
 @define-color wm_icons_unfocused_prelight @selected_bg_color;
 @define-color wm_icons_unfocused_pressed shade(@selected_bg_color, 0.8);
-
 @import url("gtk-widgets.css");
 @import url("gtk-widgets-assets.css");
-@import url("gtk-widgets-assets-dark.css");
 @import url("apps/gnome-applications.css");
 @import url("apps/granite-widgets.css");
 @import url("apps/unity.css");
