--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -188,12 +188,16 @@ GtkGrid:insensitive {
 .toolbar .button:active,
 .header-bar .button:active,
 .notebook.header {
-    box-shadow: inset 1px 0 alpha(@dark_shadow, 0.07), inset 0 1px alpha(@dark_shadow, 0.08), inset -1px 0 alpha(@dark_shadow, 0.07), inset 0 -1px alpha(@dark_shadow, 0.05);
-}
+    box-shadow: inset 1px 0 alpha(@dark_shadow, 0.07),
+    inset 0 1px alpha(@dark_shadow, 0.08),
+    inset -1px 0 alpha(@dark_shadow, 0.07),
+    inset 0 -1px alpha(@dark_shadow, 0.05);}
 
 .entry {
-    box-shadow: inset 1px 0 alpha(@dark_shadow, 0.10), inset 0 1px alpha(@dark_shadow, 0.12), inset -1px 0 alpha(@dark_shadow, 0.10), inset 0 -1px alpha(@dark_shadow, 0.05);
-}
+    box-shadow: inset 1px 0 alpha(@dark_shadow, 0.10),
+    inset 0 1px alpha(@dark_shadow, 0.12),
+    inset -1px 0 alpha(@dark_shadow, 0.10),
+    inset 0 -1px alpha(@dark_shadow, 0.05);}
 
 
 /* disable inset shadow */
